@@ -52,3 +52,4 @@ bin/Makefile
 doc/Makefile
 support/Makefile
 support/gnome-support-2.0.pc])
+
